--- a/style.css
+++ b/style.css
@@ -23,19 +23,34 @@ body{
     font-family: Lexend Deca, sans-serif;
     color: var(--nt-transp-white);
     padding: 1rem;
+    display: grid;
+    place-content: center;
+    min-height: 100vh;
+    background-color: #c4ad9d;
+}
+
+main{
+    -webkit-box-shadow: 3px 10px 14px -6px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 10px 14px -6px rgba(0,0,0,0.75);
+    box-shadow: 3px 10px 14px -6px rgba(0,0,0,0.75);
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+
 }
 
 .upper-container{
     background-color: #6943ff;
-    width: 550px;
-    padding: 33px 51px;
-    border-radius: 1rem;
+    width: 34.375rem;
+    padding: 2.063rem 3.188rem;
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    /* border-radius: 1rem; */
     /* text-align: center; */
 }
 
 h1{
     color: white;
-    font-size: 28px;
+    font-size: 1.75rem;
     font-weight: 800;
     text-align: center;
 }
@@ -46,25 +61,85 @@ h1{
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    margin-top: 30px;
+    margin-top: 1.875rem;
 }
 
-.flex-group .number{
-    font-size: 58px;
+/* .flex-group .number{
+    font-size: 3.625rem;
     color: white;
     font-weight: 800;
     border: 1px solid white;
-    width: 117px;
+    width: 7.313rem;
     text-align: center;
+} */
+
+input{
+    width: 7.313rem;
+    height: 83px;
+    background: none;
+    border: 1px solid white;
+    text-align: center;
+    font-size: 3.625rem;
+    font-weight: 800;
+    color: white;
+    border-radius: 0.625rem;
 }
 
 .flex-group button{
-    width: 117px;
+    width: 7.313rem;
     border: none;
     color: black;
     background-color: white;
-    padding: 10px;
+    padding: 0.625rem;
     font-size: 16px;
     font-weight: 500;
     border-radius: 0.3rem;
+    cursor: pointer;
+}
+
+.result-container{
+    background-color: #1F2937;
+    width: 34.375rem;
+    color:#5A537B;
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+}
+
+.rows{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    /* width: 500px; */
+    /* border: 1px solid black; */
+}
+
+.row-1{
+    margin-top: 2.25rem;
+}
+
+.row-3{
+    margin-bottom: 2.25rem;
+}
+
+.rows > *{
+    /* border: 2px solid red; */
+    width: 31.25rem;
+    text-align: center;
+    background-color: #273549;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    line-height: 2;
+    border-radius: 1rem;
+}
+
+h3{
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #CCC1FF;
+}
+
+p{
+    color: white;
 }
